# silicon-loop

./: README.md
skills/silicon-loop/: SKILL.md
skills/silicon-loop/agents/: openai.yaml
skills/silicon-loop/scripts/: check_env.mjs  svd_tool.mjs
std_repo/: CMakeLists.txt
std_repo/cmake/: gcc-arm-none-eabi.cmake
std_repo/core/inc/: main.h
std_repo/core/src/: main.c
std_repo/tools/openocd/: stm32f103c8_blue_pill.cfg
